# rdvc-demo-project

./: .envrc  .gitignore  README.md  dvc.yaml  environment.yml  init_python_venv.sh  params.yaml  pyproject.toml  setup.cfg
.dvc/: config
.rdvc/: config.toml
data/: .gitignore
metrics/train/: metrics.json
metrics/train/plots/metrics/: epoch.tsv  grad_norm_max.tsv  grad_norm_total.tsv
metrics/train/plots/metrics/train/total/: loss.tsv  mae.tsv
src/rdvc_demo_project/config/: main.yaml
src/rdvc_demo_project/config/fabric/: cpu.yaml  gpu.yaml
src/rdvc_demo_project/stages/: 01_featurise.py  02_train.py
