[metadata]
name = rdvc-demo-project
description = A demo project for RDVC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/exs-dmiketa/rdvc-demo-project
author = Exscientia
project_urls =
    Documentation = http://docs.exsapps.com/rdvc-demo-project
    Source = https://github.com/exs-dmiketa/rdvc-demo-project
    Issue tracker = https://github.com/exs-dmiketa/rdvc-demo-project/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >= 3.11
include_package_data = True
install_requires =
    pandas >= 2.0.0
    PyTDC
    rdkit
    torch >= 2.0.0
    lightning >= 2.0.0
    dvclive >= 3.0.0
    dvc[s3] >= 3.10.0

[options.packages.find]
where = src

[options.extras_require]
typing =
    mypy>1.4
    types-setuptools
    types-pyyaml

# 'dev' catch-all; useful for local pip install via `pip install -.e[dev]`
# Makes use of ConfigParser interpolation: https://docs.python.org/3/library/configparser.html#interpolation-of-values
dev =
    pyyaml
    setuptools_scm
    %(typing)s
